# simple-iot-device

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflow/: ci-pipeline.yml
.github/workflows/: ci-lint.yml  ci-linters.yml  ci-pipeline.yml  ci-test.yml  ci-tests.yml
src/simple_iot_device/: __init__.py
src/simple_iot_device/device/: __init__.py  simple_iot_device.py
src/simple_iot_device/prototype/: __init__.py
tests/: test_simple_iot_device.py
